fixed overflow when viewing a task

--- a/src/style.css
+++ b/src/style.css
@@ -268,6 +268,10 @@ li {
     z-index: 5;
 }
 
+.overlay3-desc {
+    overflow-wrap: break-word;
+}
+
 
 
 .info-box {
@@ -298,7 +302,7 @@ li {
 
 .task-info {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 50% 50%;
     grid-template-rows: minmax(1fr, 60px) 1fr;
     padding: 10px;
 }
